--- a/src/Wuzlstats/Views/Home/_Score.cshtml
+++ b/src/Wuzlstats/Views/Home/_Score.cshtml
@@ -1,53 +1,51 @@
-﻿<div class="row">
-    <div class="col-sm-6">
-        <h3 class="hidden-xs">Add score</h3>
+﻿<div class="flex flex-wrap items-center justify-between mb-4">
+    <div class="w-full sm:w-auto">
+        <h3 class="hidden sm:block text-xl font-bold">Add score</h3>
     </div>
-    <div class="col-sm-6">
-        <div class="btn-group pull-right" data-toggle="buttons">
-            <label class="btn btn-default btn-sm active">
-                <input type="radio" name="options" id="twoPlayersButton" autocomplete="off" checked>1 vs. 1
-            </label>
-            <label class="btn btn-default btn-sm">
-                <input type="radio" name="options" id="fourPlayersButton" autocomplete="off">2 vs. 2
-            </label>
+    <div class="w-full sm:w-auto mt-2 sm:mt-0">
+        <div class="inline-flex rounded-md shadow-sm" role="group">
+            <button type="button" id="twoPlayersButton" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 active-mode">
+                1 vs. 1
+            </button>
+            <button type="button" id="fourPlayersButton" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500">
+                2 vs. 2
+            </button>
         </div>
     </div>
 </div>
 
-<div class="row score-box player-score-box" id="twoPlayersScore">
-    <div class="col-xs-4">
-        <input class="form-control player team-red" id="redPlayer" placeholder="Red player" list="playersDatalist">
+<div class="flex items-center gap-4 mb-4" id="twoPlayersScore">
+    <div class="flex-1">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-red focus:outline-none focus:ring-2 focus:ring-red-300" id="redPlayer" placeholder="Red player" list="playersDatalist">
     </div>
-    <div class="col-xs-4">
-        <input class="form-control score team-red" id="redPlayerScore">
-        <input class="form-control score team-blue pull-right" id="bluePlayerScore">
-        <span>:</span>
+    <div class="flex items-center gap-2">
+        <input class="w-16 px-2 py-2 border border-gray-300 rounded text-center font-bold form-control-team-red focus:outline-none focus:ring-2 focus:ring-red-300" id="redPlayerScore" type="number" min="0">
+        <span class="text-2xl font-bold">:</span>
+        <input class="w-16 px-2 py-2 border border-gray-300 rounded text-center font-bold form-control-team-blue focus:outline-none focus:ring-2 focus:ring-blue-300" id="bluePlayerScore" type="number" min="0">
     </div>
-    <div class="col-xs-4">
-        <input class="form-control player team-blue" id="bluePlayer" placeholder="Blue player" list="playersDatalist">
-    </div>
-</div>
-
-<div class="row score-box team-score-box" id="fourPlayersScore" style="display: none;">
-    <div class="col-xs-4">
-        <input class="form-control player team-red" id="redTeamOffense" placeholder="Red offense player" list="playersDatalist">
-        <input class="form-control player team-red" id="redTeamDefense" placeholder="Red defense player" list="playersDatalist">
-    </div>
-    <div class="col-xs-4">
-        <input class="form-control score team-red" id="redTeamScore">
-        <input class="form-control score team-blue pull-right" id="blueTeamScore">
-        <span>:</span>
-    </div>
-    <div class="col-xs-4">
-        <input class="form-control player team-blue" id="blueTeamOffense" placeholder="Blue offense player" list="playersDatalist">
-        <input class="form-control player team-blue" id="blueTeamDefense" placeholder="Blue defense player" list="playersDatalist">
+    <div class="flex-1">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-blue focus:outline-none focus:ring-2 focus:ring-blue-300" id="bluePlayer" placeholder="Blue player" list="playersDatalist">
     </div>
 </div>
 
-<div class="row">
-    <div class="col-xs-12 text-center">
-        <button class="btn btn-default btn-lg" id="submitScore">Submit</button>
+<div class="flex items-start gap-4 mb-4" id="fourPlayersScore" style="display: none;">
+    <div class="flex-1 space-y-2">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-red focus:outline-none focus:ring-2 focus:ring-red-300" id="redTeamOffense" placeholder="Red offense player" list="playersDatalist">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-red focus:outline-none focus:ring-2 focus:ring-red-300" id="redTeamDefense" placeholder="Red defense player" list="playersDatalist">
     </div>
+    <div class="flex items-center gap-2 pt-2">
+        <input class="w-16 px-2 py-2 border border-gray-300 rounded text-center font-bold form-control-team-red focus:outline-none focus:ring-2 focus:ring-red-300" id="redTeamScore" type="number" min="0">
+        <span class="text-2xl font-bold">:</span>
+        <input class="w-16 px-2 py-2 border border-gray-300 rounded text-center font-bold form-control-team-blue focus:outline-none focus:ring-2 focus:ring-blue-300" id="blueTeamScore" type="number" min="0">
+    </div>
+    <div class="flex-1 space-y-2">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-blue focus:outline-none focus:ring-2 focus:ring-blue-300" id="blueTeamOffense" placeholder="Blue offense player" list="playersDatalist">
+        <input class="w-full px-3 py-2 border border-gray-300 rounded form-control-team-blue focus:outline-none focus:ring-2 focus:ring-blue-300" id="blueTeamDefense" placeholder="Blue defense player" list="playersDatalist">
+    </div>
+</div>
+
+<div class="text-center">
+    <button class="px-6 py-3 bg-blue-600 text-white font-medium rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-colors" id="submitScore">Submit</button>
 </div>
 
 <datalist id="playersDatalist"></datalist>
