--- a/src/Wuzlstats/Views/Player/Avatar.cshtml
+++ b/src/Wuzlstats/Views/Player/Avatar.cshtml
@@ -1,27 +1,31 @@
-﻿@model Wuzlstats.ViewModels.Player.AvatarViewModel
-<div class="row">
-    <div class="col-md-8 col-sm-12 col-xs-12">
+@model Wuzlstats.ViewModels.Player.AvatarViewModel
+<div class="flex flex-wrap -mx-4">
+    <div class="w-full md:w-2/3 px-4">
 
-        <div class="alert alert-info">
-            Your avatar image is your face to the entire world of wuzln. Make sure you look super extra sexy, because everybody is going to see it.
+        <div class="bg-blue-50 border-l-4 border-blue-400 p-4 mb-6">
+            <p class="text-blue-700">
+                Your avatar image is your face to the entire world of wuzln. Make sure you look super extra sexy, because everybody is going to see it.
+            </p>
         </div>
 
-        <form enctype="multipart/form-data" class="form-horizontal" method="POST">
-            <div class="form-group">
-                <label for="avatar" class="col-sm-3 control-label">
+        <form enctype="multipart/form-data" method="POST">
+            <div class="mb-6">
+                <label for="avatar" class="block text-sm font-medium text-gray-700 mb-2">
                     Select a file:
                 </label>
-                <div class="col-sm-9">
-                    <input type="file" id="avatar" name="avatar" class="form-control">
-                    <div class="help-block">Make sure your avatar is a square image. It will be resized to 150x150 pixels.</div>
+                <div>
+                    <input type="file" id="avatar" name="avatar" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <p class="mt-2 text-sm text-gray-500">Make sure your avatar is a square image. It will be resized to 150x150 pixels.</p>
                 </div>
             </div>
 
-            <a href="@Url.Action("Index", new { id = Model.Id })" class="btn btn-default">Back</a>
-            <button type="submit" class="btn btn-primary">Update avatar</button>
+            <div class="flex gap-4">
+                <a href="@Url.Action("Index", new { id = Model.Id })" class="px-4 py-2 bg-white border border-gray-300 rounded text-gray-700 hover:bg-gray-50 transition-colors">Back</a>
+                <button type="submit" class="px-6 py-2 bg-blue-600 text-white font-medium rounded hover:bg-blue-700 transition-colors">Update avatar</button>
+            </div>
         </form>
     </div>
-    <div class="col-md-4 hidden-sm hidden-xs">
+    <div class="w-full md:w-1/3 px-4 hidden md:block">
         <img src="data:image/png;base64,@Model.Image" class="player-image" alt="Avatar for @Model.Name" />
     </div>
 </div>
