--- a/src/Wuzlstats/Views/Player/Index.cshtml
+++ b/src/Wuzlstats/Views/Player/Index.cshtml
@@ -1,22 +1,22 @@
-﻿@model Wuzlstats.ViewModels.Player.IndexViewModel
+@model Wuzlstats.ViewModels.Player.IndexViewModel
 
-<div class="row">
-    <div class="col-md-8 col-sm-12 col-xs-12">
-        <div class="row">
-            <div class="col-sm-6">
-                <h4>@Model.Name in the last @Model.RecentDays days</h4>
-                <partial name="_PlayerStatistic", model="Model.RecentStatistics" />
+<div class="flex flex-wrap -mx-4">
+    <div class="w-full md:w-2/3 px-4">
+        <div class="flex flex-wrap -mx-4 mb-6">
+            <div class="w-full sm:w-1/2 px-4 mb-6">
+                <h4 class="text-lg font-bold mb-4">@Model.Name in the last @Model.RecentDays days</h4>
+                <partial name="_PlayerStatistic" model="Model.RecentStatistics" />
             </div>
-            <div class="col-sm-6">
-                <h4>@Model.Name since forever</h4>
-                <partial name="_PlayerStatistic", model="Model.Statistics" />
+            <div class="w-full sm:w-1/2 px-4 mb-6">
+                <h4 class="text-lg font-bold mb-4">@Model.Name since forever</h4>
+                <partial name="_PlayerStatistic" model="Model.Statistics" />
             </div>
         </div>
 
-        <hr />
-        <a href="@Url.Action("Avatar",new { id = Model.Id})" class="btn btn-default">Change the avatar image of @Model.Name</a>
+        <hr class="border-gray-200 mb-6" />
+        <a href="@Url.Action("Avatar",new { id = Model.Id})" class="px-4 py-2 bg-white border border-gray-300 rounded text-gray-700 hover:bg-gray-50 transition-colors">Change the avatar image of @Model.Name</a>
     </div>
-    <div class="col-md-4 hidden-sm hidden-xs">
+    <div class="w-full md:w-1/3 px-4 hidden md:block">
         <img src="data:image/png;base64,@Model.Image" class="player-image" alt="Avatar for @Model.Name" />
     </div>
 </div>
