--- a/src/Wuzlstats/Views/Shared/Error.cshtml
+++ b/src/Wuzlstats/Views/Shared/Error.cshtml
@@ -1,15 +1,17 @@
-﻿@{
+@{
     ViewBag.Title = "Error";
 }
 
-<h1>:-(</h1>
-<p>
-    An error occurred while processing your request.
-</p>
-<p>
-    This should not have happened and it's not your fault, but totally the fault of Wuzlstats. It feels very bad already.
-</p>
-<p>
-    Please try again in a few minutes. If this error continues to happen, please consider <a href="https://github.com/saxx/wuzlstats/issues">reporting it</a>, 
-    so that somebody can take her or his keyboard and fix it.
-</p>
+<div class="max-w-2xl mx-auto text-center py-12">
+    <h1 class="text-6xl font-bold text-gray-800 mb-4">:-(</h1>
+    <p class="text-xl text-gray-700 mb-4">
+        An error occurred while processing your request.
+    </p>
+    <p class="text-gray-600 mb-4">
+        This should not have happened and it's not your fault, but totally the fault of Wuzlstats. It feels very bad already.
+    </p>
+    <p class="text-gray-600">
+        Please try again in a few minutes. If this error continues to happen, please consider <a href="https://github.com/saxx/wuzlstats/issues" class="text-blue-600 hover:text-blue-800 underline">reporting it</a>,
+        so that somebody can take her or his keyboard and fix it.
+    </p>
+</div>
